main.css
html {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background: url(images/background.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    color: #04344a;
    font-family: 'Open Sans', sans-serif;
    text-align: center;
}

#wrapper {
    width: 70vw;
    height: 100%;
    margin: 0 auto;
}

#cube-container {
    position: relative;
    height: 50vh;
}

.random {
    filter: drop-shadow(3px 3px 5px gray);
    color: mediumslateblue;
    font-size: 60px;
    position: absolute;
    display: none;
}

#message {
    margin: 10px auto;
    font-size: large;
    font-weight: bold;
}

.clicked {
    opacity: 0.5;
}

.fail {
    opacity: 0.5;
    filter: blur(1px);
}

button {
    padding: 10px 15px;
    margin: 10px;
    background-color: #073e54;
    color: white;
    border: none;
    box-sizing: content-box;
    border-radius: 5px;
    font-family: 'Open Sans', sans-serif;
}

.logo {
    vertical-align: bottom;
    background-color: royalblue;
    position: absolute;
    bottom: 0;
    left: 0;
}

.logo a, img {
    vertical-align: bottom;
}

.logo img {
    width: 24px;
    height: 24px;
}

#remaining-time, #level-number {
    color: white;
    font-weight: bold;
    padding: 5px 10px;
    display: inline-block;
    border-radius: 5px;
    background-color: #8d91b2;
}

/* Mobile phones (up to 768px) */

@media (max-width: 768px) {
    html {
        object-fit: none;
    }
    #cube-container {
        height: 40vh;
    }
    #wrapper {
        width: 100%;
    }
}

